@@ -155,14 +155,6 @@ GeditWindowState gedit_window_get_state 		(GeditWindow         *window);
  */
 GtkWidget	*_gedit_window_get_notebook		(GeditWindow         *window);
 
-void		 _gedit_window_set_statusbar_visible	(GeditWindow         *window,
-							 gboolean             visible);
-void		 _gedit_window_set_toolbar_visible	(GeditWindow         *window,
-							 gboolean             visible);
-void		 _gedit_window_set_side_panel_visible	(GeditWindow         *window,
-							 gboolean             visible);
-void		 _gedit_window_set_bottom_panel_visible	(GeditWindow         *window,
-							 gboolean             visible);
 GeditWindow	*_gedit_window_move_tab_to_new_window	(GeditWindow         *window,
 							 GeditTab            *tab);
 gboolean	 _gedit_window_is_removing_tabs		(GeditWindow         *window);
